--- a/greg/gregory.html
+++ b/greg/gregory.html
@@ -19,7 +19,7 @@
 <body>
   
   <header>
-    <h1>Michael Greg</h1>
+    <h1>Michael Gregory</h1>
     <div class="container">
       <div class="personal-info">
         <img src="./img/Screen Shot 2024-02-26 at 9.19.42 PM.png" alt="" class="profile-image">
