--- a/greg/gregory.html
+++ b/greg/gregory.html
@@ -22,7 +22,7 @@
     <h1>Michael Gregory</h1>
     <div class="container">
       <div class="personal-info">
-        <img src="./img/Screen Shot 2024-02-26 at 9.19.42 PM.png" alt="" class="profile-image">
+        <img src="./img/IMG_1582.PNG" alt="" class="profile-image">
         
         <p>University of Pittsburgh</p>
         <p>Marketing Major</p>
