--- a/greg/gregory.html
+++ b/greg/gregory.html
@@ -22,7 +22,7 @@
     <h1>Michael Gregory</h1>
     <div class="container">
       <div class="personal-info">
-        <img src="./img/Screen Shot 2024-02-26 at 9.19" alt="Pitt Football Facility">
+        <img src="./img/me.png" alt="me">
         
         <p>University of Pittsburgh</p>
         <p>Marketing Major</p>
