--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background-color: black; /
+      background-color: lightblue; /
       justify-content: center;
             align-items: center;
             height: 100vh;
       margin: 2; /
-      color: grey;
+      color: black;
       text-align: center;
     }
 
